--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ ol, ul li{
   background-color: var(--primary-color);
   color: var(--secondary-color);
   padding: 1rem 2rem;
-  font-size: 1.1rem;
+  font-size: 1.125rem; /*18px = 1.125rem*/
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -143,11 +143,11 @@ ol, ul li{
 }
 
 
-/* --- Form Inputs --- */
-/*As of 03/08/2025 the default font of the webpages are 16 pixels*/
+/* --- Form Inputs (Not Including Buttons) --- */
+/*As of 03/08/2025 the default font is 16 pixels*/
 
 input {
-  font-size: 1.125em; /* 18px / 16px = 1.125em*/
+  font-size: 1em; /* 16px / 16px = 1em*/
 }
 
 .student-form-inputs {
