--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,13 +150,13 @@ input {
   font-size: 1em; /* 16px / 16px = 1em*/
 }
 
-.student-form-inputs {
+.student-form-inputs, .employee-form-inputs {
   font: inherit;
   max-width: 15em;
   margin: auto;
 }
 
-#studentName, #studentId {
+#studentName, #studentId, #empNumber, #empPin {
   border-radius: 0.444em;
   border-style: hidden;
   box-sizing: border-box;
